jWebSocket 관련 에러 임시복구 (web.xml 에서 관련 Listener 주석 처리)
git-svn-id: svn://www.okjsp.pe.kr/okjsp/trunk/html5@385 1400446e-9ab3-46cc-91c4-886daca6c3f0

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -4,11 +4,11 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
 	<display-name>html5</display-name>
-
-	<listener><!-- jWebSocket -->
+	<!--
+	<listener> jWebSocket 
 		<description>ServletContextListener</description>
 		<listener-class>org.jwebsocket.appserver.ContextListener</listener-class>
-	</listener>
+	</listener>-->
 	<servlet><!-- jWebSocket -->
 		<servlet-name>WebSocketDemo</servlet-name>
 		<servlet-class>org.jwebsocket.appserver.WebSocketDemo</servlet-class>
