--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName = cubrid.jdbc.driver.CUBRIDDriver
-jdbc.url = jdbc:cubrid:localhost:33000:okjsp:::
-jdbc.username = okjsp
+jdbc.url = jdbc:cubrid:www.okjsp.pe.kr:33000:db_test:::
+jdbc.username = dba
 jdbc.password = okpass
