--- a/src/URL.properties
+++ b/src/URL.properties
@@ -17,7 +17,7 @@ DOWN=/download
 BOOKMARK=/bookmark
 BOOKMARKDEL=/bookmark
 
-SECURE_DOMAIN=https://www.okjsp.pe.kr
+SECURE_DOMAIN=http://localhost:8080/html5
 LOGFORM=https://www.okjsp.pe.kr/jsp/member/login.jsp
 
 HEADER=
