Server-Sent Event(SSE) 샘플 추가
git-svn-id: svn://www.okjsp.pe.kr/okjsp/trunk/html5@441 1400446e-9ab3-46cc-91c4-886daca6c3f0

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -15,6 +15,10 @@
 		<servlet-name>WebSocketDemo</servlet-name>
 		<servlet-class>org.jwebsocket.appserver.WebSocketDemo</servlet-class>
 	</servlet>
+	<servlet><!-- Server-Sent Events -->
+		<servlet-name>sse</servlet-name>
+		<servlet-class>kr.pe.okjsp.sse.SSEServlet</servlet-class>
+	</servlet>
 
 	<servlet>
 		<servlet-name>okboard</servlet-name>
@@ -56,6 +60,10 @@
 	<servlet-mapping><!-- jWebSocket -->
 		<servlet-name>WebSocketDemo</servlet-name>
 		<url-pattern>/WebSocketDemo</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping><!-- Server-Sent Events -->
+		<servlet-name>sse</servlet-name>
+		<url-pattern>/sse</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>okboard</servlet-name>
