20100727_piki_메인 리스트 출력
git-svn-id: svn://www.okjsp.pe.kr/okjsp/trunk/html5@463 1400446e-9ab3-46cc-91c4-886daca6c3f0

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -56,6 +56,13 @@
 		<servlet-name>seq</servlet-name>
 		<servlet-class>kr.pe.okjsp.BbsController</servlet-class>
 	</servlet>
+	<!-- 메인 전체 게시판 -->
+	<servlet>
+		<display-name>PopBbsInfo</display-name>
+		<servlet-name>PopBbsInfo</servlet-name>
+		<servlet-class>kr.pe.okjsp.PopBbsInfoMapServlet</servlet-class>
+		<load-on-startup>5</load-on-startup>
+	</servlet>
 
 	<servlet-mapping><!-- jWebSocket -->
 		<servlet-name>WebSocketDemo</servlet-name>
