--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -21,6 +21,10 @@
 	</servlet>
 
 	<servlet>
+		<servlet-name>download</servlet-name>
+		<servlet-class>kr.pe.okjsp.DownloadServlet</servlet-class>
+	</servlet>
+	<servlet>
 		<servlet-name>okboard</servlet-name>
 		<servlet-class>kr.pe.okjsp.ControllerServlet</servlet-class>
 	</servlet>
@@ -72,6 +76,10 @@
 		<servlet-name>sse</servlet-name>
 		<url-pattern>/sse</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>download</servlet-name>
+		<url-pattern>/download</url-pattern>
+	</servlet-mapping>	
 	<servlet-mapping>
 		<servlet-name>okboard</servlet-name>
 		<url-pattern>/bbs</url-pattern>
