File Upload 샘플 등록
git-svn-id: svn://www.okjsp.pe.kr/okjsp/trunk/html5@523 1400446e-9ab3-46cc-91c4-886daca6c3f0

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -19,6 +19,10 @@
 		<servlet-name>sse</servlet-name>
 		<servlet-class>kr.pe.okjsp.sse.SSEServlet</servlet-class>
 	</servlet>
+	<servlet><!-- Samples / fileUpload -->
+		<servlet-name>samples.fileUpload.AJAXUploadServlet</servlet-name>
+		<servlet-class>kr.pe.okjsp.samples.fileUpload.AJAXUploadServlet</servlet-class>
+	</servlet>
 
 	<servlet>
 		<servlet-name>download</servlet-name>
@@ -75,6 +79,10 @@
 	<servlet-mapping><!-- Server-Sent Events -->
 		<servlet-name>sse</servlet-name>
 		<url-pattern>/sse</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping><!-- Samples / fileUpload -->
+		<servlet-name>samples.fileUpload.AJAXUploadServlet</servlet-name>
+		<url-pattern>/samples.fileUpload.AJAXUploadServlet</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>download</servlet-name>
