수정폼 작성
git-svn-id: svn://www.okjsp.pe.kr/okjsp/trunk/html5@622 1400446e-9ab3-46cc-91c4-886daca6c3f0

--- a/src/URL.properties
+++ b/src/URL.properties
@@ -18,7 +18,7 @@ BOOKMARK=/bookmark
 BOOKMARKDEL=/bookmark
 
 SECURE_DOMAIN=http://localhost:8080/html5
-LOGFORM=https://www.okjsp.pe.kr/jsp/member/login.jsp
+LOGFORM=http://localhost:8080/html5/member/login.jsp
 
 HEADER=
 HEADER2=
