--- a/src/URL.properties
+++ b/src/URL.properties
@@ -3,7 +3,7 @@ MLIST=/m/list.jsp
 MLISTDETAIL=/m/listDetail.jsp
 VIEW=/view
 PRINT=/view
-ADD=/jsp/write.jsp
+ADD=/bbs/write.jsp
 MEMO=/jsp/memo
 MODIFY=/modify
 DELETE=/delete
@@ -17,8 +17,8 @@ DOWN=/download
 BOOKMARK=/bookmark
 BOOKMARKDEL=/bookmark
 
-SECURE_DOMAIN=http://localhost:8080/html5
-LOGFORM=http://localhost:8080/html5/member/login.jsp
+SECURE_DOMAIN=https://www.okjsp.pe.kr
+LOGFORM=https://www.okjsp.pe.kr/jsp/member/login.jsp
 
 HEADER=
 HEADER2=
