20100816_piki_로컬 url
git-svn-id: svn://www.okjsp.pe.kr/okjsp/trunk/html5@670 1400446e-9ab3-46cc-91c4-886daca6c3f0

--- a/src/URL.properties
+++ b/src/URL.properties
@@ -17,8 +17,9 @@ DOWN=/download
 BOOKMARK=/bookmark
 BOOKMARKDEL=/bookmark
 
-SECURE_DOMAIN=https://www.okjsp.pe.kr
-LOGFORM=https://www.okjsp.pe.kr/jsp/member/login.jsp
+SECURE_DOMAIN=http://localhost:8887/html5
+#LOGFORM=https://www.okjsp.pe.kr/jsp/member/login.jsp
+LOGFORM=http://localhost:8887/html5/member/login.jsp
 
 HEADER=
 HEADER2=
