인코딩을 EUC-KR 에서 UTF-8로 변경 한다. (File Download 부분에 에러 발생 할 수 있음.)
git-svn-id: svn://www.okjsp.pe.kr/okjsp/trunk/html5@683 1400446e-9ab3-46cc-91c4-886daca6c3f0

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 		<filter-class>kr.pe.okjsp.SetCharacterEncodingFilter</filter-class>
 		<init-param>
 			<param-name>encoding</param-name>
-			<param-value>euc-kr</param-value>
+			<param-value>UTF-8</param-value>
 		</init-param>
 	</filter>
 
