--- a/src/URL.properties
+++ b/src/URL.properties
@@ -17,9 +17,12 @@ DOWN=/download
 BOOKMARK=/bookmark
 BOOKMARKDEL=/bookmark
 
-SECURE_DOMAIN=http://localhost:8080/html5
-#LOGFORM=https://www.okjsp.pe.kr/jsp/member/login.jsp
-LOGFORM=http://localhost:8080/html5/member/login.jsp
+SECURE_DOMAIN=http://localhost:8887/html5
+
+#server
+LOGFORM=https://www.okjsp.pe.kr:9080/jsp/member/login.jsp
+#local
+#LOGFORM=http://localhost:8887/html5/member/login.jsp
 
 HEADER=
 HEADER2=
