20100830_piki_서버와 로컬 경로 수정(서버로 맞춤)
git-svn-id: svn://www.okjsp.pe.kr/okjsp/trunk/html5@776 1400446e-9ab3-46cc-91c4-886daca6c3f0

--- a/src/URL.properties
+++ b/src/URL.properties
@@ -17,7 +17,10 @@ DOWN=/download
 BOOKMARK=/bookmark
 BOOKMARKDEL=/bookmark
 
-SECURE_DOMAIN=http://localhost:8887/html5
+#server
+SECURE_DOMAIN=http://www.okjsp.pe.kr:9080/html5
+#local
+#SECURE_DOMAIN=http://localhost:8887/html5
 
 #server
 LOGFORM=https://www.okjsp.pe.kr:9080/jsp/member/login.jsp
