jWebSocket Config 설정 추가
git-svn-id: svn://www.okjsp.pe.kr/okjsp/trunk/html5@785 1400446e-9ab3-46cc-91c4-886daca6c3f0

--- a/src/URL.properties
+++ b/src/URL.properties
@@ -17,6 +17,11 @@ DOWN=/download
 BOOKMARK=/bookmark
 BOOKMARKDEL=/bookmark
 
+# jWebSocket Chatting Config File (Server)
+JWEBSOCKET_CONFIG_FILE=/web/kenu/html5/WEB-INF/conf/jWebSocket.xml
+# jWebSocket Chatting Config File (Local)
+# JWEBSOCKET_CONFIG_FILE=/Workspace_MelOn/html5/WebContent/WEB-INF/conf/jWebSocket.xml
+
 #server
 SECURE_DOMAIN=http://www.okjsp.pe.kr:9080/html5
 #local
