첨부파일의 물리적 경로를 okjsp2007 버젼의 첨부파일 경로로 설정 하였다.
git-svn-id: svn://www.okjsp.pe.kr/okjsp/trunk/html5@814 1400446e-9ab3-46cc-91c4-886daca6c3f0

--- a/src/URL.properties
+++ b/src/URL.properties
@@ -11,6 +11,13 @@ REPLY=/reply
 RECENT=/jsp/recent.jsp
 MEMORECENT=/jsp/memorecent.jsp
 UPDIR=/upload
+
+# Upload File Directory (Server)
+# UPDIR_HTML5=/web/kenu/okjsp.80port.net/upload
+# Upload File Directory (client)
+# UPDIR_HTML5=/Workspace_MelOn/html5/WebContent/html5/upload
+UPDIR_HTML5=/web/kenu/okjsp.80port.net/upload
+
 MOVE=/jsp/move.jsp
 SITESEARCH=/jsp/siteSearch.jsp
 DOWN=/download
@@ -18,19 +25,22 @@ BOOKMARK=/bookmark
 BOOKMARKDEL=/bookmark
 
 # jWebSocket Chatting Config File (Server)
-JWEBSOCKET_CONFIG_FILE=/web/kenu/html5/WEB-INF/conf/jWebSocket.xml
+# JWEBSOCKET_CONFIG_FILE=/web/kenu/html5/WEB-INF/conf/jWebSocket.xml
 # jWebSocket Chatting Config File (Local)
 # JWEBSOCKET_CONFIG_FILE=/Workspace_MelOn/html5/WebContent/WEB-INF/conf/jWebSocket.xml
+JWEBSOCKET_CONFIG_FILE=/web/kenu/html5/WEB-INF/conf/jWebSocket.xml
 
-#server
+# server
+# SECURE_DOMAIN=http://www.okjsp.pe.kr:9080/html5
+# local
+# SECURE_DOMAIN=http://localhost:8080/html5
 SECURE_DOMAIN=http://www.okjsp.pe.kr:9080/html5
-#local
-#SECURE_DOMAIN=http://localhost:8887/html5
 
-#server
+# server
+# LOGFORM=https://www.okjsp.pe.kr:9080/jsp/member/login.jsp
+# local
+# LOGFORM=http://localhost:8080/html5/member/login.jsp
 LOGFORM=https://www.okjsp.pe.kr:9080/jsp/member/login.jsp
-#local
-#LOGFORM=http://localhost:8887/html5/member/login.jsp
 
 HEADER=
 HEADER2=
