--- a/src/URL.properties
+++ b/src/URL.properties
@@ -34,13 +34,13 @@ JWEBSOCKET_CONFIG_FILE=/web/kenu/html5/WEB-INF/conf/jWebSocket.xml
 # SECURE_DOMAIN=http://www.okjsp.pe.kr:9080/html5
 # local
 # SECURE_DOMAIN=http://localhost:8080/html5
-SECURE_DOMAIN=http://www.okjsp.pe.kr:9080/html5
+SECURE_DOMAIN=https://www.okjsp.pe.kr/html5
 
 # server
 # LOGFORM=https://www.okjsp.pe.kr:9080/jsp/member/login.jsp
 # local
 # LOGFORM=http://localhost:8080/html5/member/login.jsp
-LOGFORM=https://www.okjsp.pe.kr:9080/jsp/member/login.jsp
+LOGFORM=https://www.okjsp.pe.kr/html5/member/login.jsp
 
 HEADER=
 HEADER2=
