--- a/src/URL.properties
+++ b/src/URL.properties
@@ -36,6 +36,11 @@ JWEBSOCKET_CONFIG_FILE=/web/kenu/html5/WEB-INF/conf/jWebSocket.xml
 # SECURE_DOMAIN=http://localhost:8080/html5
 SECURE_DOMAIN=https://www.okjsp.pe.kr/html5
 
+#server
+HOME_URL=http://www.okjsp.pe.kr/html5
+#local
+HOME_URL=http://localhost:8080/html5
+
 # server
 # LOGFORM=https://www.okjsp.pe.kr:9080/jsp/member/login.jsp
 # local
