--- a/src/URL.properties
+++ b/src/URL.properties
@@ -31,21 +31,19 @@ BOOKMARKDEL=/bookmark
 JWEBSOCKET_CONFIG_FILE=/web/kenu/html5/WEB-INF/conf/jWebSocket.xml
 
 # server
-# SECURE_DOMAIN=http://www.okjsp.pe.kr:9080/html5
-# local
-# SECURE_DOMAIN=http://localhost:8080/html5
 SECURE_DOMAIN=https://www.okjsp.pe.kr/html5
+# local
+#SECURE_DOMAIN=http://localhost:8080/html5
 
 #server
 HOME_URL=http://www.okjsp.pe.kr/html5
 #local
-HOME_URL=http://localhost:8080/html5
+#HOME_URL=http://localhost:8080/html5
 
 # server
-# LOGFORM=https://www.okjsp.pe.kr:9080/jsp/member/login.jsp
-# local
-# LOGFORM=http://localhost:8080/html5/member/login.jsp
 LOGFORM=https://www.okjsp.pe.kr/html5/member/login.jsp
+# local
+#LOGFORM=http://localhost:8080/html5/member/login.jsp
 
 HEADER=
 HEADER2=
