--- a/src/URL.properties
+++ b/src/URL.properties
@@ -8,9 +8,9 @@ MEMO=/jsp/memo
 MODIFY=/modify
 DELETE=/delete
 REPLY=/reply
-RECENT=/jsp/recent.jsp
-MEMORECENT=/jsp/memorecent.jsp
+RECENT=/main/main.jsp
 UPDIR=/upload
+FIRST_MAIN=/main/main.jsp
 
 # Upload File Directory (Server)
 # UPDIR_HTML5=/web/kenu/okjsp.80port.net/upload
@@ -48,5 +48,3 @@ LOGFORM=https://www.okjsp.pe.kr/html5/member/login.jsp
 HEADER=
 HEADER2=
 
-<!--  piki : main -->
-FIRST_MAIN=/main/main.jsp
